--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,10 +32,10 @@ jobs:
       # Install dependencies
       - name: Install dependencies
         run: npm install
-
-      # Run tests
-      - name: Run tests
-        run: npm test -- --watchAll=false
+#
+#      # Run tests
+#      - name: Run tests
+#        run: npm test -- --watchAll=false
 
       # Build the React application
       - name: Build the app
