--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.26.3",
+    "@babel/plugin-proposal-private-property-in-object": "^7.14.5",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0"
   }
