--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/icons-material": "^6.2.1",
     "@mui/material": "^6.2.0",
     "@mui/system": "^6.2.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -46,9 +47,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.14.5",
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.26.3",
-    "@babel/plugin-proposal-private-property-in-object": "^7.14.5",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0"
   }
