--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,6 @@
 server {
     listen 80;
+    server_name fakecollegefootball.com www.fakecollegefootball.com;
 
     root /usr/share/nginx/html;
     index index.html;
