add new useful tables

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,13 @@
 server {
     listen 80;
-    server_name fakecollegefootball.com www.fakecollegefootball.com;
+    server_name fakecollegefootball.com;
+
+    return 301 http://www.fakecollegefootball.com$request_uri;
+}
+
+server {
+    listen 80;
+    server_name www.fakecollegefootball.com;
 
     root /usr/share/nginx/html;
     index index.html;
@@ -10,7 +17,6 @@ server {
     }
 
     location /static/ {
-        # Static files caching
         expires 1y;
         add_header Cache-Control "public";
     }
