--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,19 @@ server {
     listen 80;
     server_name fakecollegefootball.com;
 
-    return 301 http://www.fakecollegefootball.com$request_uri;
+    root /usr/share/nginx/html;
+    index index.html;
+
+    location / {
+        try_files $uri /index.html;
+    }
+
+    location /static/ {
+        expires 1y;
+        add_header Cache-Control "public";
+    }
+
+    error_page 404 /index.html;
 }
 
 server {
