--- a/nginx.conf
+++ b/nginx.conf
@@ -6,8 +6,11 @@ server {
 }
 
 server {
-    listen 80;
-    server_name www.fakecollegefootball.com;
+    listen 443 ssl;
+    server_name fakecollegefootball.com www.fakecollegefootball.com;
+
+    ssl_certificate /etc/letsencrypt/live/fakecollegefootball.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/fakecollegefootball.com/privkey.pem;
 
     root /usr/share/nginx/html;
     index index.html;
