update to only expose 443

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,13 +1,12 @@
 server {
     listen 80;
-    server_name fakecollegefootball.com;
-
-    return 301 http://www.fakecollegefootball.com$request_uri;
+    server_name www.fakecollegefootball.com;
+    return 301 https://fakecollegefootball.com$request_uri;  # Redirect www to non-www
 }
 
 server {
     listen 443 ssl;
-    server_name fakecollegefootball.com www.fakecollegefootball.com;
+    server_name fakecollegefootball.com;
 
     ssl_certificate /etc/letsencrypt/live/fakecollegefootball.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/fakecollegefootball.com/privkey.pem;
