--- a/nginx.conf
+++ b/nginx.conf
@@ -14,13 +14,37 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # Forward traffic to your backend
+    location / {
+            proxy_pass http://51.81.32.234:1212/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto https;
+        }
+
+    # Serve the main application
     location / {
         try_files $uri /index.html;
     }
 
+    # Optimize static files
     location /static/ {
         expires 1y;
         add_header Cache-Control "public";
+    }
+
+    # Redirect 404 errors to the SPA
+    error_page 404 /index.html;
+
+    # Prevent access to hidden files and directories
+    location ~ /\. {
+        deny all;
+    }
+
+    # Deny access to certificate files (security best practice)
+    location ~* \.(pem|key)$ {
+        deny all;
     }
 
     error_page 404 /index.html;
